# deptrack-devbox

./: README.md  devbox.cabal  stack.yaml
app/: Main.hs
src/: Recipes.hs
test/: Spec.hs
